Construção do Texto

--- a/Relatório/Semana-1/0-Capa/capa.tex
+++ b/Relatório/Semana-1/0-Capa/capa.tex
@@ -11,9 +11,9 @@
 \vspace*{.8cm}
 {\huge \textbf{UNIVERSIDADE FEDERAL DE SÃO CARLOS}}\\
 \vspace*{.8cm}
-{\Large \textbf{SIMULAÇÃO DE SISTEMAS}}\\
+{\Large \textbf{SISTEMAS DE INFORMAÇÕES GERENCIAIS}}\\
 \vspace*{3cm}
-{\Large \textbf{Projeto para uma central de atendimentos}}\\
+{\Large \textbf{Sistema de Informação para Otimização de Roteiros Turísticos}}\\
 \vspace*{4.5cm}
 \begin{flushright}
     \onehalfspacing
