--- a/Relatório/Semana-1/1-Introdução/introducao.tex
+++ b/Relatório/Semana-1/1-Introdução/introducao.tex
@@ -13,7 +13,7 @@ Outro ponto importante é que as atrações não podem ser visitadas em qualquer
 
 A representação completa do problema, então, é uma implementação multiperíodo do problema do caixeiro viajante lucrativo com restrições temporais, orçamentárias e espaciais. Nessa situação, o caixeiro (ou, simplesmente, viajante) sai de um galpão (aeroporto, rodoviária, entre outros), passa por um hotel, visita atrações (cada qual com seu horário de funcionamento e tempo de visita), paga por elas e recebe um prêmio de satisfação por isso. Esse prêmio será incialmente medido em unidades monetárias e representaria o preço máximo pelo qual o turista pagaria por aquela atração. Além de visitar atrações, o viajante deve também se alimentar em um restaurante no meio do dia e voltar à um hotel ao final dele. No dia seguinte, ele visitará mais atrações e estará disposto às mesmas restrições. Por fim, o caixeiro precisa retornar ao depósito (aeroporto ou rodoviária) e a viagem (ou roteiro) estará completa(o).
 
-O projeto se justifica, sobretudo, no interesse dos atores econômicos no turismo e dos stakeholders desta área. Afinal, a Organização Mundial do Turismo (UNWTO, 2014) “estima que atividades de turismo são diretamente responsáveis por 6%-8% dos trabalhos gerados no mundo todo” (SILVA; MORABITO; PUREZA, 2018). 
+O projeto se justifica, sobretudo, no interesse dos atores econômicos no turismo e dos stakeholders desta área. Afinal, a Organização Mundial do Turismo (UNWTO, 2014) “estima que atividades de turismo são diretamente responsáveis por 6\%-8\% dos trabalhos gerados no mundo todo” (SILVA; MORABITO; PUREZA, 2018). 
 
 Além disso, há uma grande quantidade de artigos sobre o tema de otimização de roteiros turísticos, mas a maioria deles tem enfoque no aspecto da coleta de dados para o planejamento de roteiros turísticos (SILVA; MORABITO; PUREZA, 2018). Um artigo (SILVA; MORABITO; PUREZA, 2018), foca no quesito das otimizações desses roteiros, contudo, no modelo construído não foi feita uma otimização multiperíodo.
 
