--- a/Relatório/Semana-1/2-Descrição-detalhada/descricao.tex
+++ b/Relatório/Semana-1/2-Descrição-detalhada/descricao.tex
@@ -11,16 +11,16 @@ Outro aspecto crucial é a necessidade de melhorar a satisfação do cliente ao 
 Com isso, podemos estabelecer, já, os atores envolvidos no sistema. São eles:
 
 \subsection{Clientes:} 
-Os clientes são os principais usuários do sistema. Eles interagem com o sistema para acessar informações sobre atrações turísticas, horários de funcionamento, custos de visitação e outros detalhes relevantes para planejar suas viagens. Além disso, os clientes fornecem feedback sobre suas experiências, o que é essencial para aprimorar o sistema e garantir a satisfação do cliente a longo prazo. O intuito é que os clientes forneçam apenas as cidades que querem visitar e recebam a rota otimizada para aquela localidade.
+Os clientes são os principais usuários do sistema. Eles interagem com o sistema para acessar informações sobre atrações turísticas, horários de funcionamento, custos de visitação e outros detalhes relevantes para planejar suas viagens. Além disso, os clientes fornecem feedback sobre suas experiências, o que é essencial para aprimorar o sistema e garantir a satisfação do cliente a longo prazo. O intuito é que os clientes forneçam apenas as cidades que querem visitar e recebam a rota otimizada para aquela localidade. Os clientes também poderão consultar rotas que já foram criadas pelo sistema.
 
 \subsection{API do Google sobre as cidades:} 
 A API do Google sobre as cidades é um agente externo ao sistema, que fornece informações valiosas sobre as cidades e atrações turísticas. Essa API pode incluir dados como pontos turísticos, hotéis, restaurantes, horários de funcionamento, informações geográficas e muito mais. A integração dessa API no sistema permite que os usuários acessem informações atualizadas e detalhadas sobre os destinos turísticos, contribuindo para a precisão e relevância dos roteiros gerados.
 
 \subsection{Sistema de Otimização:} 
-O sistema de otimização é o núcleo do sistema de informação. Ele utiliza técnicas de Pesquisa Operacional, como o Problema do Caixeiro Viajante Lucrativo com Restrições Temporais e Orçamentárias, para criar itinerários turísticos eficientes e satisfatórios. O sistema de otimização analisa os dados fornecidos pela API do Google sobre as cidades, juntamente com as preferências e restrições dos clientes, para criar roteiros personalizados que atendam às necessidades e desejos dos viajantes.
+O sistema de otimização é o núcleo do sistema de informação. Ele utiliza técnicas de Pesquisa Operacional para criar itinerários turísticos eficientes e satisfatórios. O sistema de otimização analisa os dados fornecidos pela API do Google sobre as cidades, juntamente com as preferências e restrições dos clientes, para criar roteiros personalizados que atendam às necessidades e desejos dos viajantes.
 
-\subsection{Sistema de Busca na API:} 
-O sistema de busca na API é responsável por recuperar informações específicas dos destinos turísticos a partir dos dados fornecidos pela API do Google. Ele atua como uma interface entre o sistema de otimização e as informações relevantes para os roteiros turísticos. Essa integração é fundamental para garantir que o sistema de otimização tenha acesso a dados atualizados e precisos sobre as atrações turísticas, possibilitando a geração de roteiros otimizados e relevantes.
+\subsection{Sistema de Coleta de dados:} 
+Este é o responsável por consultar a API e, além disso, fazer toda a gestão dos dados do sistema. Isso inclui a formatação das informações fornecidas pela API, os dados dos clientes e o registro das rotas que já foram otimizadas.
 
 \subsection{Administrador do Sistema:} 
 O administrador do sistema é um agente humano responsável por gerenciar e supervisionar o funcionamento do sistema como um todo. Ele atua como um ponto central de controle, garantindo que o sistema esteja atualizado, seguro e funcionando adequadamente. O administrador é responsável por lidar com a manutenção do sistema, realizar atualizações, monitorar a segurança dos dados e fornecer suporte técnico aos usuários. Além disso, o administrador também pode realizar análises dos dados gerados pelo sistema para identificar oportunidades de melhoria e tomar decisões estratégicas para aprimorar a eficiência e a qualidade dos serviços oferecidos pelo sistema.
