--- a/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
+++ b/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
@@ -59,3 +59,44 @@ Essas interações e funcionalidades detalhadas no diagrama de caso de uso ofere
 \subsection{Diagrama de Fluxo de Dados}
 
 O diagrama de fluxo de dados é uma poderosa ferramenta de modelagem que descreve como as informações fluem dentro de um sistema, identificando as entradas, processamentos e saídas de dados. Nesta seção, apresentaremos o diagrama de fluxo de dados em três níveis (0, 1 e 2) do sistema de otimização de roteiros turísticos. O objetivo é fornecer uma visão detalhada das diferentes camadas do sistema, desde o nível mais abstrato até o mais detalhado.
+
+\subsubsection{Nivel 0}
+
+No DFD nível 0, foi representado a direção dos fluxos de informações que entram e saem do sitema principal, relacionando-os com os seus respectivos autores, os quais foram mostrados na Figura \ref{fig:DCU} 
+\begin{figure}[H]
+    \centering
+    \caption{Diagrama Fluxo de Dados - Nível 0}
+    \label{fig:DFD0}
+    \includegraphics[scale=0.5]{Diagramas/DFD0.jpeg}\\
+    \caption*{Fonte: Elaborado pelos autores, Figura completa disponível no apêndice}
+\end{figure}
+
+
+\subsubsection{Nivel 1}
+
+
+\begin{figure}[H]
+    \centering
+    \caption{Diagrama Fluxo de Dados - Nível 1}
+    \label{fig:DFD0}
+    \includegraphics[scale=0.5]{Diagramas/DFD1.png}\\
+    \caption*{Fonte: Elaborado pelos autores, Figura completa disponível no apêndice}
+\end{figure}
+
+
+
+\subsubsection{Nivel 2}
+
+\begin{figure}[H]
+    \centering
+    \caption{Diagrama Fluxo de Dados - Nível 2}
+    \label{fig:DFD0}
+    \includegraphics[scale=0.29]{Diagramas/DFD2.png}\\
+    \caption*{Fonte: Elaborado pelos autores, Figura completa disponível no apêndice}
+\end{figure}
+
+
+\subsection{Diagrama de Entidade Relacionamento}
+
+
+\subsection{Modelo Relacional}
