--- a/Relatório/Semana-1/main.tex
+++ b/Relatório/Semana-1/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{newtxtext} % Times New Roman
@@ -12,6 +12,7 @@
 \usepackage{booktabs}
 \usepackage{float}
 \usepackage{caption}
+\usepackage{url}
 
 \makeindex % Criar índice depois
 
@@ -33,6 +34,11 @@
 
 \section{Levantamento de Requisitos}
 \input{3-Levantamento-de-Requisitos/requisitos.tex}
+
+\section{Conclusão}
+\input{5-conclusao/conclusao.tex}
+
+
 
 \section{Referências}
 \input{4-referencias/referencias.tex}
